# symwalker

./: .gitignore  Cargo.toml  README.md
docs/: HEURISTICS.md  QUICK_REFERENCE.md
examples/: advanced-usage.sh  basic-scan.sh  debuginfod-examples.sh
src/: binary.rs  cli.rs  debuginfod.rs  elf.rs  macho.rs  main.rs  output.rs  symbol_finder.rs
